--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
 
     <nav class="navbar">
-      <h1>BinToWin</h1>
+      <h1><a href="/home" class="webname">BinToWin</a></h1>
       <div>
       <a href="/signup"><button class="navbtn">Sign Up</button></a>
      <a href="/login"> <button  class="navbtn">Login </button></a>
