--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -5,7 +5,7 @@
     Connect with the NGOs, Recyclers, and UpCyclers . 
         Make an Imapact from your Home & Company 
     </p>
-    <button class="contro">Contribute</button>
+    <a class="contro" href="/contribute">Contribute</a>
  </div>
 </div>
  <div class="div2">
