--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,31 +1,51 @@
-body{
+body {
+    font-family: "Plus Jakarta Sans", sans-serif;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
     width: 99vw;
     margin: 0px;
     padding: 0px;
     background-color: beige;
-box-sizing: border-box;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.container{
-    
-background-color: beige;
+
+.center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
-.navbar
-{
-    display:flex;
+
+.container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    margin-top: 40px;
+    background-color: beige;
+}
+
+.navbar {
+    display: flex;
     align-content: center;
     justify-content: space-between;
-    height:80px;
-    background-color:  #16a34a;
+    height: 80px;
+    background-color: #16a34a;
     color: beige;
-    
+    width: 100%;
 }
-.navbtn
-{
-    background-color:beige;
-    border:none;
-    padding:  5px 8px;
+
+.webname {
+    text-decoration: none;
+    color: white;
+}
+
+.navbtn {
+    background-color: beige;
+    border: none;
+    padding: 5px 8px;
     border-radius: 20px;
     margin: 8px;
     color: #16a34a;
@@ -33,78 +53,91 @@ background-color: beige;
     font-weight: bold;
     transition: 0.5;
 }
-.navbtn:hover{
-transform: scale(1.1);
+
+.navbtn:hover {
+    transform: scale(1.1);
 }
-.fdiv{
+
+.fdiv {
     background-color: beige;
-    padding:25px;
-text-align: center;
+    padding: 25px;
+    text-align: center;
 
 }
-.Secondlife{
 
-    margin:10px;
-}
-.para1{
-    margin:3rem;
+.Secondlife {
 
-}
-.contro{
-    
-      background-color:  #16a34a;
-      border: none;
-      padding: 5px;
-      color:beige;
-      font-weight: bold;
-      border-radius: 20px;
-      margin:20px;
-      transition: 0.5s;
-      padding: 10px 15px;
-    
-}
-.contro:hover{
-transform:scale(1.2);
-background-color: #20a854;
+    margin: 10px;
 }
 
-.div2{
-text-align: center;
-background-color: #16a34a;
-padding: 25px;
+.para1 {
+    margin: 3rem;
+
 }
-.div3{
+
+.contro {
+    display: inline-block;
+    text-decoration: none;
+    background-color: #16a34a;
+    border: none;
+    padding: 5px;
+    color: beige;
+    font-weight: bold;
+    border-radius: 20px;
+    margin: 20px;
+    transition: 0.5s;
+    padding: 10px 15px;
+
+}
+
+.contro:hover {
+    transform: scale(1.2);
+    background-color: #20a854;
+}
+
+.div2 {
+    text-align: center;
+    background-color: #16a34a;
+    padding: 25px;
+}
+
+.div3 {
     background-color: beige;
     border-radius: 30px;
-    padding:15px;
+    padding: 15px;
     margin: 2rem;
     height: 18rem;
-    
+    animation: slide 1s ease-in;
+    animation-delay: 2s;
 }
-.div3 p,h1{
-text-align: center;
-margin:2rem;
+
+.div3 p,
+h1 {
+    text-align: center;
+    margin: 2rem;
 }
+
 .camera {
     height: 100px;
-    width:100px;
+    width: 100px;
 
 }
-.foot{
+
+.foot {
     height: 4em;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:green;
+    background-color: green;
     font-weight: bold;
     font-size: 22px;
-    color:black;
+    color: black;
 }
 
 
-.containerForm{
+.containerForm {
 
-     box-shadow:0 7px 10px  green;
+    box-shadow: 0 7px 10px green;
     max-width: 800px;
     border-radius: 10px;
     margin: 80px;
@@ -115,71 +148,117 @@ margin:2rem;
     text-align: center;
 }
 
-#userButton{
+#userButton {
     margin: 10px;
     padding: 15px;
     border-style: none;
     border-radius: 40rem;
     font-size: 23px;
     font-weight: 200px;
-    width:150px;
+    width: 150px;
     box-shadow: 0 5px 7px rgb(73, 36, 36);
-    color:rgb(73, 36, 36);
-}
-#userButton:active{
-    background-color: green;
-    color:white;
-}
-#userButton:hover{
-    background-color: green;
-    color:white;
-}
-
-#ngoButton{
-    margin: 10px;
-    padding: 15px;
-    border-style: none;
-    border-radius: 40rem;
-    font-size: 23px;
-    font-weight: 200px;
-    width:150px;
-    box-shadow: 0 5px 7px rgb(73, 36, 36);
-    color:rgb(73, 36, 36);
-}
-
-#ngoButton:active{
-    background-color: green;
-    color:white;
-}
-#ngoButton:hover{
-    background-color: green;
-    color:white;
-}
-.userHead{
     color: rgb(73, 36, 36);
-   
 }
-#userLoginButton{
+
+#userButton:active {
+    background-color: green;
+    color: white;
+}
+
+#userButton:hover {
+    background-color: green;
+    color: white;
+}
+
+#ngoButton {
+    margin: 10px;
+    padding: 15px;
     border-style: none;
-    width:7rem;
+    border-radius: 40rem;
+    font-size: 23px;
+    font-weight: 200px;
+    width: 150px;
+    box-shadow: 0 5px 7px rgb(73, 36, 36);
+    color: rgb(73, 36, 36);
+}
+
+#ngoButton:active {
+    background-color: green;
+    color: white;
+}
+
+#ngoButton:hover {
+    background-color: green;
+    color: white;
+}
+
+.userHead {
+    color: rgb(73, 36, 36);
+
+}
+
+#userLoginButton {
+    border-style: none;
+    width: 7rem;
     border-radius: 12rem;
     background-color: green;
-    color:white;
+    color: white;
     height: 3rem;
     box-shadow: 0 5px 7px rgb(73, 36, 36);
 }
-.userForm{
+
+.userForm {
     margin: 5px;
-    padding:5px;
-    height:12rem;
-    width:100%;
+    padding: 5px;
+    height: 12rem;
+    width: 100%;
 }
-.userInput{
+
+.userInput {
     border-style: none;
     border-radius: 5px;
-    width:80%;
+    width: 80%;
     background-color: white;
-    height:2rem;
-    font-size:18px;
+    height: 2rem;
+    font-size: 18px;
     box-shadow: 0 5px 7px rgb(73, 36, 36);
+}
+
+/* Contribute Page Styling */
+
+.containerGreen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 5px 6px beige;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    color: green;
+}
+
+.formGreen {
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid rgb(121, 121, 121);
+}
+
+#map {
+    height: 80vh;
+    width: 50vw;
+}
+
+/* Animations */
+
+@keyframes slide {
+    from {
+        transform: translateX(-100%);
+    }
+
+    to {
+        transform: translateX(0);
+    }
 }
