--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
     <div class="foot">
-        <p>© 2025 BinToWin . Build With love For the planet </p>
+        <p> &copy; 2025 BinToWin | Build with &hearts; for Earth </p>
     </div>
 </footer>
