--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,39 +1,35 @@
- <% layout("/layouts/boilerplate.ejs") -%>
- <div class="fdiv">
-    <h1 class="Secondlife"> Give Your Waste  A Second Life </h1>
-    <p class="para1"> 
-    Connect with the NGOs, Recyclers, and UpCyclers . 
-        Make an Imapact from your Home & Company 
-    </p>
-    <a class="contro" href="/contribute">Contribute</a>
- </div>
-</div>
- <div class="div2">
-    <h1 style="color: white;"> How BinToWin Work</h1>
-    <div class="div3">
-        <img class="camera" src="https://img.icons8.com/?size=160&id=u6A1fcsd1q2J&format=png" alt="img"  >
-        <h1>1. Add Your Items</h1>
-        <p>Take a photo  of your reusable waste item. 
-         Add a quick description and category.
+<% layout("/layouts/boilerplate.ejs") -%>
+    <div class="fdiv">
+        <h1 class="Secondlife"> Give Your Waste A Second Life </h1>
+        <p class="para1">
+            Connect with the NGOs, Recyclers, and UpCyclers .
+            Make an Imapact from your Home & Company
         </p>
+        <a class="contro" href="/contribute">Contribute</a>
     </div>
+    <div class="div2 mb-5">
+        <h1 style="color: white;"> How EchoBridge Work</h1>
+        <div class="div3">
+            <img class="camera" src="https://img.icons8.com/?size=160&id=u6A1fcsd1q2J&format=png" alt="img">
+            <h1>1. Add Your Items</h1>
+            <p>Take a photo of your reusable waste item.
+                Add a quick description and category.
+            </p>
+        </div>
 
-    <div class="div3">
-        <img src="https://img.icons8.com/?size=160&id=6nrYifh6GrxJ&format=png"  height="100px" width="100px">
-        <h1>2. Auto-Match With NGO</h1>
-        <p>We connect you instantly to the right NGO,
-            Recyclers or UpCyclers near by.
-        </p>
+        <div class="div3">
+            <img src="https://img.icons8.com/?size=160&id=6nrYifh6GrxJ&format=png" height="100px" width="100px">
+            <h1>2. Auto-Match With NGO</h1>
+            <p>We connect you instantly to the right NGO,
+                Recyclers or UpCyclers near by.
+            </p>
+        </div>
+
+        <div class="div3">
+            <img src="https://img.icons8.com/?size=160&id=65480&format=png" height="100px" width="100px">
+            <h1>3. Drop or Pickup</h1>
+            <p>Choose your perferred option .
+                EcoPoint & impact badges every time you contribute!.
+            </p>
+        </div>
     </div>
-
-     <div class="div3">
-        <img src="https://img.icons8.com/?size=160&id=65480&format=png" height="100px" width="100px" >
-        <h1>3. Drop or Pickup</h1>
-        <p>Choose your perferred option . 
-            EcoPoint & impact badges every time you contribute!.
-        </p>
-    </div>
-
-
-
- </div>
