Add Profile page

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -18,6 +18,7 @@
         integrity="sha256-1Q8d6b2k5a4z75z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/pstyle.css">
 </head>
 
 <body>
