--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,15 @@ body {
     padding: 0px;
     background-color: beige;
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* background-image: url("https://sdmntprwestus3.oaiusercontent.com/files/00000000-d91c-61fd-a981-98beffbf04b8/raw?se=2025-07-10T15%3A55%3A52Z&sp=r&sv=2024-08-04&sr=b&scid=f3751312-6e66-5c62-bae6-f31803cb3d71&skoid=0da8417a-a4c3-4a19-9b05-b82cee9d8868&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-07-10T10%3A25%3A48Z&ske=2025-07-11T10%3A25%3A48Z&sks=b&skv=2024-08-04&sig=9WPyvE9o0Oeuxq4LPH7gfgpNR4kydU9M6IUVL%2B0BDGc%3D");
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 
+.profileimg{
+    height: 50px;
+    width:50px;
+    border-radius: 50%;
+}
 .center {
     display: flex;
     flex-direction: column;
@@ -24,7 +30,7 @@ body {
     flex-direction: column;
     flex: 1;
     margin-top: 40px;
-    background-color: beige;
+
 }
 
 .navbar {
@@ -51,12 +57,14 @@ body {
     color: #16a34a;
     padding: 8px 10px;
     font-weight: bold;
-    transition: 0.5;
+    transition: 0.5s;
 }
 
 .navbtn:hover {
     transform: scale(1.1);
 }
+
+/* index page css */
 
 .fdiv {
     background-color: beige;
@@ -107,8 +115,7 @@ body {
     padding: 15px;
     margin: 2rem;
     height: 18rem;
-    animation: slide 1s ease-in;
-    animation-delay: 2s;
+   
 }
 
 .div3 p,
@@ -128,100 +135,10 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: green;
+    background-color:#16a34a;
     font-weight: bold;
     font-size: 22px;
-    color: black;
-}
-
-
-.containerForm {
-
-    box-shadow: 0 7px 10px green;
-    max-width: 800px;
-    border-radius: 10px;
-    margin: 80px;
-    margin-left: 450px;
-    padding: 20px;
-    width: max-content;
-    background: beige;
-    text-align: center;
-}
-
-#userButton {
-    margin: 10px;
-    padding: 15px;
-    border-style: none;
-    border-radius: 40rem;
-    font-size: 23px;
-    font-weight: 200px;
-    width: 150px;
-    box-shadow: 0 5px 7px rgb(73, 36, 36);
-    color: rgb(73, 36, 36);
-}
-
-#userButton:active {
-    background-color: green;
-    color: white;
-}
-
-#userButton:hover {
-    background-color: green;
-    color: white;
-}
-
-#ngoButton {
-    margin: 10px;
-    padding: 15px;
-    border-style: none;
-    border-radius: 40rem;
-    font-size: 23px;
-    font-weight: 200px;
-    width: 150px;
-    box-shadow: 0 5px 7px rgb(73, 36, 36);
-    color: rgb(73, 36, 36);
-}
-
-#ngoButton:active {
-    background-color: green;
-    color: white;
-}
-
-#ngoButton:hover {
-    background-color: green;
-    color: white;
-}
-
-.userHead {
-    color: rgb(73, 36, 36);
-
-}
-
-#userLoginButton {
-    border-style: none;
-    width: 7rem;
-    border-radius: 12rem;
-    background-color: green;
-    color: white;
-    height: 3rem;
-    box-shadow: 0 5px 7px rgb(73, 36, 36);
-}
-
-.userForm {
-    margin: 5px;
-    padding: 5px;
-    height: 12rem;
-    width: 100%;
-}
-
-.userInput {
-    border-style: none;
-    border-radius: 5px;
-    width: 80%;
-    background-color: white;
-    height: 2rem;
-    font-size: 18px;
-    box-shadow: 0 5px 7px rgb(73, 36, 36);
+    color:white;
 }
 
 /* Contribute Page Styling */
@@ -252,13 +169,3 @@ h1 {
 }
 
 /* Animations */
-
-@keyframes slide {
-    from {
-        transform: translateX(-100%);
-    }
-
-    to {
-        transform: translateX(0);
-    }
-}
