--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -9,7 +9,7 @@
  </div>
 </div>
  <div class="div2">
-    <h1 style="color: white;"> How BinToWin Work</h1>
+    <h1 style="color: white;"> How EchoBridge Work</h1>
     <div class="div3">
         <img class="camera" src="https://img.icons8.com/?size=160&id=u6A1fcsd1q2J&format=png" alt="img"  >
         <h1>1. Add Your Items</h1>
